# czarneniebo-ai

./: .gitignore  404.html  AUDYT-COWORK.md  CHANGELOG.md  LICENSE  LICENSE-PREMIUM  README.md  URUCHOM.bat  dezinformacja.py  file_watcher.py  index.html  mkdocs.yml  objects.inv  pipeline.py  pyproject.toml  restauracja_mediow.py  sitemap.xml
.github/workflows/: docs.yml  release.yml
api/config/: index.html
api/dezinformacja/: index.html
api/forensics_pipeline/: index.html
api/graf_powiazań/: index.html
api/pipeline/: index.html
api/whisper_transkrypcja/: index.html
czarneniebo/: __init__.py  config.py  dezinformacja.py  file_watcher.py  forensics_pipeline.py  graf_powiazań.py  pipeline.py  restauracja_mediow.py  web_ui.py  whisper_transkrypcja.py
docs/: index.md  instalacja.md  licencja.md
docs/api/: config.md  dezinformacja.md  forensics_pipeline.md  graf_powiazań.md  pipeline.md  whisper_transkrypcja.md
instalacja/: index.html
legacy/: graf_powiazań.py  web_ui.py
licencja/: index.html
scripts/: install.py  test_e2e.py
search/: search_index.json
tests/: conftest.py  test_config.py  test_forensics.py  test_imports.py  test_smoke.py
